# tbjvect3

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_windows.bat  build_windows_simple.bat  setup.py  test_pyqt6.py
examples/c/: example  example.c
examples/cpp/: concave_collision_example.cpp  continuous_collision_example.cpp  example  example.cpp  transform_example.cpp
examples/python/: example.py
src/c_interface/: geometry_c.cpp  geometry_c.h
src/core/: geometry.cpp  geometry.h  matrix.cpp  matrix.h  simd_utils.h
src/python/: __init__.py  geometry.py
src/tests/: benchmark.cpp  unit_tests.cpp
